fix: search options being hidden on small screens

--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -94,16 +94,19 @@ input {
 @media screen and (max-width: 900px) {
   .locator {
     flex-direction: column;
-    height: 600px;
+    height: 800px;
     width: 100%;
     margin: auto;
   }
   .searchbox {
+    height:35%;
     width: 80%;
     margin: auto;
+    justify-content: start;
   }
   
   .mymap {
+    height: 65%;
     width: 100%;
   }
 }
